--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
             font-size: 8px;
             font-family: Arial;
         }
+
         .f10 {
             font-size: 10px;
             font-family: Arial;
@@ -414,7 +415,7 @@
             -->
 
 
-</header>
+        </header>
 
         <div id="flip" class="container">
 
@@ -448,8 +449,11 @@
                         Architected and implemented a project management mobile web application.
                     </div>
                     <div class="f16 myBody">
-                        HTML5, Sencha Touch 2.3, JQuery 1.9.1, JavaScript, CSS/SASS, Siesta (testing tool),
-                        Microsoft .NET 4.5, C#, Microsoft WCF
+                        Tools: <a target="_blank" href="https://www.atlassian.com/software/jira">Jira (requirements, task management, ticketing)</a>, <a target="_blank" href="http://git-scm.com/">Git (version control</a>),
+                        <br />Browser: <a target="_blank" href="http://www.sencha.com/products/touch/">Sencha ExtJS 2.3</a>, <a target="_blank" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a> ,
+                        <br />Server: <a target="_blank" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft Windows Communication Foundation (WCF)</a>, <a target="_blank" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server 2010</a>
+
+
                     </div>
                 </div>
                 <div class="box w-10 h-50 box-b-l box-b-r">
@@ -457,16 +461,26 @@
                 <div class="box w-10 h-50 box-b-l box-b-r">
                 </div>
                 <div class="box w-90 h-50 box-b-l box-b-r box-img-right">
-                    <div class="img-cont" style="background-image: url(resources/images/me.png); "></div>
-                    <div class="f18">Online Mobile Resume</div>
+
+
+
+
+
+                    <div class="img-cont" style="background-image: url(resources/images/EMSPEED12.png); "></div>
+                    <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
                     <div class="f16">Senior HTML5 Architect</div>
-                    <div class="f14">November 2013</div>
+                    <div class="f14">June 2012 - present</div>
                     <div class="f16 myBody">
-                        Resume implemented as a mobile web application.  Includes several innovative ways to page through data.
+                        Architected and implemented a Web-based portal to a project management system.  Built as 100% browser based 'Single Page Application'
+                        utilizing HTML5, JavaScript, AJAX and CSS3.
                     </div>
                     <div class="f16 myBody">
-                        HTML5, Sencha Touch 2.3, JQuery 1.9.1, JavaScript, CSS/SASS
+                        Tools: <a target="_blank" href="https://www.atlassian.com/software/jira">Jira (requirements, task management, ticketing)</a>, <a target="_blank" href="http://git-scm.com/">Git (version control</a>),
+                        <br />Browser: <a target="_blank" href="http://www.sencha.com/products/extjs/">Sencha ExtJS 4.2</a>, <a target="_blank" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a> ,
+                        <br />Server: <a target="_blank" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft Windows Communication Foundation (WCF)</a>, <a target="_blank" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server 2010</a>
                     </div>
+
+
                 </div>
             </div>
 
@@ -482,20 +496,21 @@
                 <div class="box w-10 h-50 box-b-l box-b-r">
                 </div>
                 <div class="box w-90 h-50 box-b-l box-b-r box-img-right">
-                    <div class="img-cont" style="background-image: url(resources/images/EMSPEED12.png); "></div>
-                    <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
+
+                    <div class="img-cont" style="background-image: url(resources/images/me.png); "></div>
+                    <div class="f18">Online Mobile Resume</div>
                     <div class="f16">Senior HTML5 Architect</div>
-                    <div class="f14">June 2012 - present</div>
+                    <div class="f14">November 2013</div>
                     <div class="f16 myBody">
-                        Architected and implemented a Web-based portal to a project management system.  The User Interface
-                        is 100% browser based, utilizing HTML5, JavaScript and CSS and is built as a 'Single Page Application'.   All
-                        interaction with the server is via AJAX calls to Microsoft Windows Communication Framework (WCF) services and
-                        SQL Server.
+                        Resume implemented as a mobile web application.  Includes several innovative ways to page through data.
                     </div>
                     <div class="f16 myBody">
-                        HTML5, Sencha ExtJS 4.2, JQuery 1.9.1, JavaScript, CSS/SASS, Siesta (testing tool),
-                        Microsoft .NET 4.5, C#, Microsoft WCF
+                        HTML5, Sencha Touch 2.3, JQuery 1.9.1, JavaScript, CSS/SASS
                     </div>
+
+
+
+
                 </div>
                 <div class="box w-90 h-50 box-b-l box-b-r box-img-left">
                     <div class="img-cont" style="background-image: url(resources/images/EMSPEEDPOC.jpg); "></div>
