--- a/index.html
+++ b/index.html
@@ -422,8 +422,7 @@
 
             <div class="f-page f-cover">
                 <div class="cover-elements">
-                    <h1 class="f18">Swipe or drag to flip pages</h1>
-                    <h1 class="f18">Click to open items<span>Best viewed on iPad</span></h1>
+                    <h1 class="f18">Swipe or drag to flip pages<span>Best viewed on iPad</span></h1>
                     <p><strong>or on desktop withn a Webkit browser (Safari, Chrome)</strong></p>
                     <div class="f-cover-story f16"><span>Projects Summary</span>Marc Gusmano<div>&nbsp</div></div>
                 </div>
