--- a/index.html
+++ b/index.html
@@ -398,7 +398,14 @@
             </div>
 
             <div class="f24 myBody" style="color:red;margin:20px 0px 0px 0px;" id="theBrowser"></div>
-            <a href="https://www.atlassian.com/software/jira">test</a>
+
+            <a href="https://www.atlassian.com/software/jira">test</a><br />
+            Tools: <a target="_blank" href="https://www.atlassian.com/software/jira">Jira (requirements, task management, ticketing)</a>, <a target="_blank" href="http://git-scm.com/">Git (version control</a>),
+            <br />Browser: <a target="_blank" href="http://www.sencha.com/products/touch/">Sencha ExtJS 2.3</a>, <a target="_blank" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a> ,
+            <br />Server: <a target="_blank" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft Windows Communication Foundation (WCF)</a>, <a target="_blank" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server 2010</a>
+
+
+
             <!--
             <div class="f18 myHeading">Who am I?</div>
             <div class="f14" style="margin:5px 0px 0px 0px;">I have a passion for building outstanding software, especially leading edge, user-centric applications.</div>
