--- a/index.html
+++ b/index.html
@@ -240,6 +240,24 @@
 
     <!--mjg styles-->
     <style>
+
+        a:link {
+            color: #000000;
+        }
+        /* unvisited link */
+        a:visited {
+            color: #000000;
+        }
+        /* visited link */
+        a:hover {
+            color: #000000;
+        }
+        /* mouse over link */
+        a:active {
+            color: #000000;
+        }
+
+
         .x-layout-card-item {
             background: white;
         }
@@ -450,7 +468,7 @@
                     </div>
                     <div class="f16 myBody">
                         <a href="https://www.atlassian.com/software/jira">test</a><br/>
-                        Tools: <a target="_blank" href="https://www.atlassian.com/software/jira">Jira (requirements, task management, ticketing)</a>, <a target="_blank" href="http://git-scm.com/">Git (version control</a>),
+                        Tools: <a target="_blank" style="text-decoration: underline;" href="https://www.atlassian.com/software/jira">Jira (requirements, task management, ticketing)</a>, <a target="_blank" href="http://git-scm.com/">Git (version control</a>),
                         <br />Browser: <a target="_blank" href="http://www.sencha.com/products/touch/">Sencha ExtJS 2.3</a>, <a target="_blank" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a> ,
                         <br />Server: <a target="_blank" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft Windows Communication Foundation (WCF)</a>, <a target="_blank" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server 2010</a>
                     </div>
