--- a/index.html
+++ b/index.html
@@ -398,6 +398,55 @@
         </ol>
     </div>
 
+    <div id="fmobile" style="display: none;">
+        <table>
+            <tr>
+                <td>
+                    <img src="resources/images/mobile.png" alt="" width="100%">
+                </td>
+                <td>
+                    <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
+                    <div class="f16">Senior HTML5 Architect</div>
+                    <div class="f14">April 2013 - present</div>
+                    <div class="f16 myBody">
+                        Architected and implemented a project management mobile web application.
+                    </div>
+                    <div class="f16 myBody">
+                        Tools: <a target="_blank" class="lnk" href="https://www.atlassian.com/software/jira">Jira (requirements, tasks, ticketing)</a>, <a target="_blank" class="lnk" href="http://git-scm.com/">Git (version control</a>),
+                        <br />Browser: <a target="_blank" class="lnk" href="http://www.sencha.com/products/touch/">Sencha ExtJS 2.3</a>, <a target="_blank" class="lnk" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" class="lnk" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a> ,
+                        <br />Server: <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft Windows Communication Foundation (WCF)</a>, <a target="_blank" class="lnk" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server 2010</a>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </div>
+
+    <div id="fEMSPEED12" style="display: none;">
+        <table>
+            <tr>
+                <td>
+                    <img src="resources/images/EMSPEED12.png" alt="" width="100%">
+                </td>
+                <td>
+                    <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
+                    <div class="f16">Senior HTML5 Architect</div>
+                    <div class="f14">June 2012 - present</div>
+                    <div class="f16 myBody">
+                        Architected and implemented a Web-based portal to a project management system.  Built as 100% browser based 'Single Page Application'
+                        utilizing HTML5, JavaScript, AJAX and CSS3.
+                    </div>
+                    <div class="f16 myBody">
+                        Tools: <a target="_blank" class="lnk" href="https://www.atlassian.com/software/jira">Jira (requirements, task management, ticketing)</a>, <a target="_blank" class="lnk" href="http://git-scm.com/">Git (version control</a>),
+                        <br />Browser: <a target="_blank" class="lnk" href="http://www.sencha.com/products/extjs/">Sencha ExtJS 4.2</a>, <a target="_blank" class="lnk" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" class="lnk" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a> ,
+                        <br />Server: <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft Windows Communication Foundation (WCF)</a>, <a target="_blank" class="lnk" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server 2010</a>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </div>
+
+
+
     <div id="fliparea" style="display: none;">
 
         <header class="main-title">
@@ -462,7 +511,7 @@
                     <a>Previous Projects</a>
                 </div>
                 <div class="box w-90 h-50 box-b-l box-b-r box-img-left">
-                    <div class="img-cont" style="background-image: url(resources/images/mobile.png); "></div>
+                    <div class="img-cont" back="mobile" style="cursor:pointer;background-image: url(resources/images/mobile.png); "></div>
                     <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
                     <div class="f16">Senior HTML5 Architect</div>
                     <div class="f14">April 2013 - present</div>
@@ -470,10 +519,12 @@
                         Architected and implemented a project management mobile web application.
                     </div>
                     <div class="f16 myBody">
-                        <a href="https://www.atlassian.com/software/jira">test</a><br/>
-                        Tools: <a target="_blank" class="lnk" href="https://www.atlassian.com/software/jira">Jira (requirements, task management, ticketing)</a>, <a target="_blank" class="lnk" href="http://git-scm.com/">Git (version control</a>),
+                        Tools: <a target="_blank" class="lnk" href="https://www.atlassian.com/software/jira">Jira (requirements, tasks, ticketing)</a>, <a target="_blank" class="lnk" href="http://git-scm.com/">Git (version control</a>),
                         <br />Browser: <a target="_blank" class="lnk" href="http://www.sencha.com/products/touch/">Sencha ExtJS 2.3</a>, <a target="_blank" class="lnk" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" class="lnk" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a> ,
                         <br />Server: <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft Windows Communication Foundation (WCF)</a>, <a target="_blank" class="lnk" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server 2010</a>
+                    </div>
+                    <div class="f20 myBody" style="color:red;margin:20px 0px 0px 0px;">
+                        << click image for more details
                     </div>
                 </div>
                 <div class="box w-10 h-50 box-b-l box-b-r">
@@ -481,12 +532,7 @@
                 <div class="box w-10 h-50 box-b-l box-b-r">
                 </div>
                 <div class="box w-90 h-50 box-b-l box-b-r box-img-right">
-
-
-
-
-
-                    <div class="img-cont" style="background-image: url(resources/images/EMSPEED12.png); "></div>
+                    <div class="img-cont" back="EMSPEED12" style="cursor: pointer; background-image: url(resources/images/EMSPEED12.png); "></div>
                     <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
                     <div class="f16">Senior HTML5 Architect</div>
                     <div class="f14">June 2012 - present</div>
@@ -495,12 +541,13 @@
                         utilizing HTML5, JavaScript, AJAX and CSS3.
                     </div>
                     <div class="f16 myBody">
-                        Tools: <a target="_blank" href="https://www.atlassian.com/software/jira">Jira (requirements, task management, ticketing)</a>, <a target="_blank" href="http://git-scm.com/">Git (version control</a>),
-                        <br />Browser: <a target="_blank" href="http://www.sencha.com/products/extjs/">Sencha ExtJS 4.2</a>, <a target="_blank" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a> ,
-                        <br />Server: <a target="_blank" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft Windows Communication Foundation (WCF)</a>, <a target="_blank" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server 2010</a>
+                        Tools: <a target="_blank" class="lnk" href="https://www.atlassian.com/software/jira">Jira (requirements, task management, ticketing)</a>, <a target="_blank" class="lnk" href="http://git-scm.com/">Git (version control</a>),
+                        <br />Browser: <a target="_blank" class="lnk" href="http://www.sencha.com/products/extjs/">Sencha ExtJS 4.2</a>, <a target="_blank" class="lnk" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" class="lnk" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a> ,
+                        <br />Server: <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft Windows Communication Foundation (WCF)</a>, <a target="_blank" class="lnk" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server 2010</a>
                     </div>
-
-
+                    <div class="f20 myBody" style="color:red;margin:20px 0px 0px 0px;">
+                        click image for more details >>
+                    </div>
                 </div>
             </div>
 
@@ -517,7 +564,7 @@
                 </div>
                 <div class="box w-90 h-50 box-b-l box-b-r box-img-right">
 
-                    <div class="img-cont" style="background-image: url(resources/images/me.png); "></div>
+                    <div class="img-cont" style="background-image: url(resources/images/me.png);"></div>
                     <div class="f18">Online Mobile Resume</div>
                     <div class="f16">Senior HTML5 Architect</div>
                     <div class="f14">November 2013</div>
@@ -768,7 +815,6 @@
                 Architected and implemented a project management mobile web application.
             </div>
             <div class="f14 myBody">
-                <a href="https://www.atlassian.com/software/jira">test</a><br />
                 Tools: <a target="_blank" href="https://www.atlassian.com/software/jira">Jira (requirements, task management, ticketing)</a>, <a target="_blank" href="http://git-scm.com/">Git (version control</a>),
                 <br />Browser: <a target="_blank" href="http://www.sencha.com/products/touch/">Sencha ExtJS 2.3</a>, <a target="_blank" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a> ,
                 <br />Server: <a target="_blank" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft Windows Communication Foundation (WCF)</a>, <a target="_blank" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server 2010</a>
