--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                     <a>Previous Projects</a>
                 </div>
                 <div class="box w-90 h-50 box-b-l box-b-r box-img-left">
-                    <div class="img-cont" back="mobile" style="cursor:pointer;background-image: url(resources/images/mobile.png); "></div>
+                    <div class="img-cont" back="mobile" style="cursor:default;background-image: url(resources/images/mobile.png); "></div>
                     <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
                     <div class="f16">Senior HTML5 Architect</div>
                     <div class="f14">April 2013 - present</div>
@@ -532,7 +532,7 @@
                 <div class="box w-10 h-50 box-b-l box-b-r">
                 </div>
                 <div class="box w-90 h-50 box-b-l box-b-r box-img-right">
-                    <div class="img-cont" back="EMSPEED12" style="cursor: pointer; background-image: url(resources/images/EMSPEED12.png); "></div>
+                    <div class="img-cont" back="EMSPEED12" style="cursor: default; background-image: url(resources/images/EMSPEED12.png); "></div>
                     <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
                     <div class="f16">Senior HTML5 Architect</div>
                     <div class="f14">June 2012 - present</div>
