--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                     </div>
                     <div class="f16 myBody">
                         Tools: <a target="_blank" class="lnk" href="https://www.atlassian.com/software/jira">Jira (requirements, tasks, ticketing)</a>, <a target="_blank" class="lnk" href="http://git-scm.com/">Git (version control</a>),
-                        <br />Browser: <a target="_blank" class="lnk" href="http://www.sencha.com/products/touch/">Sencha ExtJS 2.3</a>, <a target="_blank" class="lnk" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" class="lnk" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a> ,
+                        <br />Browser: <a target="_blank" class="lnk" href="http://www.sencha.com/products/touch/">Sencha Touch 2.3</a>, <a target="_blank" class="lnk" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" class="lnk" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a> ,
                         <br />Server: <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft Windows Communication Foundation (WCF)</a>, <a target="_blank" class="lnk" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server 2010</a>
                     </div>
                     <div class="f20 myBody" style="color:red;margin:20px 0px 0px 0px;">
@@ -816,7 +816,7 @@
             </div>
             <div class="f14 myBody">
                 Tools: <a target="_blank" href="https://www.atlassian.com/software/jira">Jira (requirements, task management, ticketing)</a>, <a target="_blank" href="http://git-scm.com/">Git (version control</a>),
-                <br />Browser: <a target="_blank" href="http://www.sencha.com/products/touch/">Sencha ExtJS 2.3</a>, <a target="_blank" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a> ,
+                <br />Browser: <a target="_blank" href="http://www.sencha.com/products/touch/">Sencha Touch 2.3</a>, <a target="_blank" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a> ,
                 <br />Server: <a target="_blank" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft Windows Communication Foundation (WCF)</a>, <a target="_blank" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server 2010</a>
             </div>
         </div>
