--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                         <br />Server: <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft Windows Communication Foundation (WCF)</a>, <a target="_blank" class="lnk" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server 2010</a>
                     </div>
 
-                    <button onclick="alert('hi')">Click me</button>
+                    <button style="z-index:20;" onclick="alert('hi')">Click me</button>
                     <!--
                     <div class="f20 myBody" style="color:red;margin:20px 0px 0px 0px;">
                         << click image for more details
