--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                     <h2>Projects at Hitachi Consulting</h2>
                     <a>Previous Projects</a>
                 </div>
-                <div class="box w-90 h-50 box-b-l box-b-r box-img-left">
+                <div class="box w-90 h-50 box-b-l box-b-r box-img-left" id="button1">
                     <div class="img-cont" back="mobile" style="cursor:default;background-image: url(resources/images/mobile.png); "></div>
                     <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
                     <div class="f16">Senior HTML5 Architect</div>
