--- a/index.html
+++ b/index.html
@@ -240,6 +240,15 @@
 
     <!--mjg styles-->
     <style>
+
+        .launch {
+            margin: 5px 0px 0px 0px;
+            z-index: 2000;
+            height: 40px;
+            position: relative;
+        }
+
+        
         .lnk {
             text-decoration: underline;
         }
@@ -510,7 +519,7 @@
                     <h2>Projects at Hitachi Consulting</h2>
                     <a>Previous Projects</a>
                 </div>
-                <div class="box w-90 h-50 box-b-l box-b-r box-img-left" id="button1">
+                <div class="box w-90 h-50 box-b-l box-b-r box-img-left" id="buttonMobile">
                     <div class="img-cont" back="mobile" style="cursor:default;background-image: url(resources/images/mobile.png); "></div>
                     <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
                     <div class="f16">Senior HTML5 Architect</div>
@@ -534,7 +543,7 @@
                 </div>
                 <div class="box w-10 h-50 box-b-l box-b-r">
                 </div>
-                <div class="box w-90 h-50 box-b-l box-b-r box-img-right">
+                <div class="box w-90 h-50 box-b-l box-b-r box-img-right" id="buttonEMSPEED12">
                     <div class="img-cont" back="EMSPEED12" style="cursor: default; background-image: url(resources/images/EMSPEED12.png); "></div>
                     <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
                     <div class="f16">Senior HTML5 Architect</div>
