--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             <div class=" f40 myname">
                 Marc Gusmano
             </div>
-            <div class="f18">Senior Microsoft SharePoint and HTML5 Architect</div>
+            <div class="f18">Senior HTML5 and Microsoft SharePoint Architect</div>
             <div class="f18 myHeading">Summary:</div>
             <div class="f16 myBody">
                 Marc Gusmano is a Senior Manager with Hitachi Consulting based in the Houston, TX office
