--- a/index.html
+++ b/index.html
@@ -478,13 +478,12 @@
                     <div class="f16">Senior HTML5 Architect</div>
                     <div class="f14">June 2012 - present</div>
                     <div class="f16 myBody">
-                        Architected and implemented a Web-based portal to a project management system.  Built as 100% browser based 'Single Page Application'
-                        utilizing HTML5, JavaScript, AJAX and CSS3.
+                        Architected and implemented a Web-based project management.  Built as 100% browser based 'Single Page Application' with HTML5, JavaScript, AJAX and CSS3.
                     </div>
                     <div class="f16 myBody">
                         Tools: <a target="_blank" class="lnk" href="https://www.atlassian.com/software/jira">Jira (requirements, task management, ticketing)</a>, <a target="_blank" class="lnk" href="http://git-scm.com/">Git (version control</a>)
                         <br />Browser: <a target="_blank" class="lnk" href="http://www.sencha.com/products/extjs/">Sencha ExtJS 4.2</a>, <a target="_blank" class="lnk" href="http://jquery.com/">JQuery 1.9.1</a>, <a target="_blank" class="lnk" href="http://www.bryntum.com/products/siesta/">Siesta (testing)</a> ,
-                        <br />Server: <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft Windows Communication Foundation (WCF)</a>, <a target="_blank" class="lnk" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server 2010</a>
+                        <br />Server: <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms171868(v=vs.110).aspx">Microsoft .NET Framework 4.5 in C#</a>, <a target="_blank" class="lnk" href="http://msdn.microsoft.com/en-us/library/ms731082(v=vs.110).aspx">Microsoft WCF</a>, <a target="_blank" class="lnk" href="https://www.microsoft.com/en-us/sqlserver/default.aspx">SQL Server 2010</a>
                     </div>
                 </div>
             </div>
