--- a/index.html
+++ b/index.html
@@ -460,8 +460,7 @@
                 <div class="box w-100 h-50 box-b-l box-b-r box-img-left" id="buttonMobile">
                     <div class="img-cont" back="mobile" style="cursor:default;background-image: url(resources/images/mobile.png); "></div>
                     <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
-                    <div class="f16">Senior HTML5 Architect</div>
-                    <div class="f14">April 2013 - present</div>
+                    <div class="f16">Senior HTML5 Architect - April 2013 to present</div>
                     <div class="f16 myBody">
                         Architected and implemented a project management mobile web application.
                     </div>
@@ -475,8 +474,7 @@
                 <div class="box w-100 h-50 box-b-l box-b-r box-img-right" id="buttonEMSPEED12">
                     <div class="img-cont" back="EMSPEED12" style="cursor: default; background-image: url(resources/images/EMSPEED12.png); "></div>
                     <div class="f18">Large Oil and Gas Provider - Houston, TX</div>
-                    <div class="f16">Senior HTML5 Architect</div>
-                    <div class="f14">June 2012 - present</div>
+                    <div class="f16">Senior HTML5 Architect - June 2012 to present</div>
                     <div class="f16 myBody">
                         Architected and implemented a Web-based project management.  Built as 100% browser based 'Single Page Application' with HTML5, JavaScript, AJAX and CSS3.
                     </div>
