--- a/index.html
+++ b/index.html
@@ -408,15 +408,33 @@
                 He is involved in the development of solutions
                 that utilize technologies such as Visual Studio, SharePoint, ASP.NET and HTML5.
             </div>
-            <div class="f16 myBody">
+            <div class="f16 myBody" style="margin: 20px 0px 0px 0px;">
                 Mr. Gusmano is extensively involved with custom HTML5 development projects, combining his knowledge of the underlying
                 SharePoint architecture with his experience building HTML5 Single Page Applications, working on the requirements,
                 design and development of custom solutions.
             </div>
 
+            <div class="f16 myBody" style="margin: 20px 0px 0px 0px;">
+                BS Business Administration, University Of Illinois, May 1984 (GPA 4.6/5.0)<br />
+                Microsoft Regional Director in the US Midwest District for 3 years<br />
+                Developing brower-based web applications for the past 10 years, ASP.NET, Silverlight, HTML5/JavaScript/CSS<br />
+                Speaker at numerous conferences, including Microsoft TechEd US and Europe<br />
+                Founder / Partner,  The Bismarck Group, Chicago, Illinois - 1995 to 1997<br />
+                Partner, The Information Management Group, Chicago, Illinois – 1997 to 2009<br />
+            </div>
+
             <div class="f24 myBody" style="color:red;margin:20px 0px 0px 0px;" id="theBrowser"></div>
 
 
+            <!--
+            <li style="font-size: 24px; list-style: square outside;">BS Business Administration, University Of Illinois, May 1984 (GPA 4.6/5.0)</li>
+            <li style="font-size: 24px; list-style: square outside;">Instructor for SharePoint Advanced Developer classes for The Ted Pattison Group curriculum   Ted Pattison Developer Courses - http://www.tedpattison.net/CoursesForDevelopers.aspx</li>
+            <li style="font-size: 24px; list-style: square outside;">Microsoft Regional Director in the US Midwest District for 3 years.</li>
+            <li style="font-size: 24px; list-style: square outside;">Public Speaker and Conference Presenter</li>
+            <li style="font-size: 24px; list-style: square outside;">Speaker at numerous conferences, including Microsoft TechEd US and Europe and Advisor Magazine DevCons - A recent event is the Microsoft MSDN Developer Conference - http://www.msdndevcon.com/Pages/Chicago.aspx</li>
+            <li style="font-size: 24px; list-style: square outside;">Founder / Partner,  The Bismarck Group, Chicago, Illinois - 1995 to 1997</li>
+            <li style="font-size: 24px; list-style: square outside;">Partner, The Information Management Group, Chicago, Illinois – 1997 to 2009</li>
+-->
             <!--
             <div class="f18 myHeading">Who am I?</div>
             <div class="f14" style="margin:5px 0px 0px 0px;">I have a passion for building outstanding software, especially leading edge, user-centric applications.</div>
