--- a/index.html
+++ b/index.html
@@ -414,13 +414,13 @@
                 design and development of custom solutions.
             </div>
 
-            <div class="f16 myBody" style="margin: 20px 0px 0px 0px;">
-                BS Business Administration, University Of Illinois, May 1984 (GPA 4.6/5.0)<br />
-                Microsoft Regional Director in the US Midwest District for 3 years<br />
-                Developing brower-based web applications for the past 10 years, ASP.NET, Silverlight, HTML5/JavaScript/CSS<br />
-                Speaker at numerous conferences, including Microsoft TechEd US and Europe<br />
-                Founder / Partner,  The Bismarck Group, Chicago, Illinois - 1995 to 1997<br />
-                Partner, The Information Management Group, Chicago, Illinois – 1997 to 2009<br />
+            <div class="f14 myBody" style="margin: 20px 0px 0px 0px;">
+                -BS Business Administration, University Of Illinois, May 1984 (GPA 4.6/5.0)<br />
+                -Microsoft Regional Director in the US Midwest District for 3 years<br />
+                -Developing brower-based web applications for the past 10 years, ASP.NET, Silverlight, HTML5/JavaScript/CSS<br />
+                -Speaker at numerous conferences, including Microsoft TechEd US and Europe<br />
+                -Founder / Partner,  The Bismarck Group, Chicago, Illinois - 1995 to 1997<br />
+                -Partner, The Information Management Group, Chicago, Illinois – 1997 to 2009<br />
             </div>
 
             <div class="f24 myBody" style="color:red;margin:20px 0px 0px 0px;" id="theBrowser"></div>
