--- a/index.html
+++ b/index.html
@@ -403,10 +403,8 @@
             <div class="f18">Senior HTML5 and Microsoft SharePoint Architect</div>
             <div class="f18 myHeading">Summary:</div>
             <div class="f16 myBody">
-                Marc Gusmano is a Senior Manager with Hitachi Consulting based in the Houston, TX office
+                Marc Gusmano is a Senior Manager/Architect with Hitachi Consulting based in the Houston, TX office
                 with 30 years of experence in the software services industry.
-                He is involved in the development of solutions
-                that utilize technologies such as Visual Studio, SharePoint, ASP.NET and HTML5.
             </div>
             <div class="f16 myBody" style="margin: 20px 0px 0px 0px;">
                 Mr. Gusmano is extensively involved with custom HTML5 development projects, combining his knowledge of the underlying
@@ -415,12 +413,12 @@
             </div>
 
             <div class="f14 myBody" style="margin: 20px 0px 0px 0px;">
-                -BS Business Administration, University Of Illinois, May 1984 (GPA 4.6/5.0)<br />
+                -BS Business Administration, University Of Illinois, May 1984<br />
                 -Microsoft Regional Director in the US Midwest District for 3 years<br />
-                -Developing brower-based web applications for the past 10 years, ASP.NET, Silverlight, HTML5/JavaScript/CSS<br />
-                -Speaker at numerous conferences, including Microsoft TechEd US and Europe<br />
-                -Founder / Partner,  The Bismarck Group, Chicago, Illinois - 1995 to 1997<br />
-                -Partner, The Information Management Group, Chicago, Illinois – 1997 to 2009<br />
+                -Developing brower-based web applications for the past 10 years<br />
+                -Speaker at numerous conferences, including Microsoft TechEd<br />
+                -Founder / Partner, The Bismarck Group, Chicago, Il<br />
+                -Partner, The Information Management Group, Chicago, Il<br />
             </div>
 
             <div class="f24 myBody" style="color:red;margin:20px 0px 0px 0px;" id="theBrowser"></div>
