--- a/index.html
+++ b/index.html
@@ -403,53 +403,59 @@
             <div class="f18">Senior HTML5 and Microsoft SharePoint Architect</div>
             <div class="f18 myHeading">Summary:</div>
             <div class="f16 myBody">
-                Marc Gusmano is a Senior Manager/Architect with Hitachi Consulting based in the Houston, TX office
+                Senior Manager with Hitachi Consulting based in the Houston, TX office
                 with 30 years of experence in the software services industry.
             </div>
             <div class="f16 myBody" style="margin: 20px 0px 0px 0px;">
-                Mr. Gusmano is extensively involved with custom HTML5 development projects, combining his knowledge of the underlying
-                SharePoint architecture with his experience building HTML5 Single Page Applications, working on the requirements,
+                Mr. Gusmano is extensively involved with custom HTML5 development projects, typically combining his knowledge of the underlying
+                Microsoft SharePoint architecture with his experience building HTML5 Single Page Applications; working on the requirements,
                 design and development of custom solutions.
             </div>
 
             <div class="f14 myBody" style="margin: 20px 0px 0px 0px;">
-                -BS Business Administration, University Of Illinois, May 1984<br />
-                -Microsoft Regional Director in the US Midwest District for 3 years<br />
-                -Developing brower-based web applications for the past 10 years<br />
-                -Speaker at numerous conferences, including Microsoft TechEd<br />
-                -Founder / Partner, The Bismarck Group, Chicago, Il<br />
-                -Partner, The Information Management Group, Chicago, Il<br />
+                - BS Business Administration, University Of Illinois, May 1984<br />
+                - Microsoft Regional Director in the US Midwest District for 3 years<br />
+                - Developing brower-based web applications for the past 10 years<br />
+                - Speaker at numerous conferences, including Microsoft TechEd<br />
+                - Founder / Partner, The Bismarck Group, Chicago, Il<br />
+                - Partner, The Information Management Group, Chicago, Il<br />
+            </div>
+
+            <div class="f14 myBody" style="font-style: italic; color: #146BA8; margin: 20px 0px 0px 0px;">
+                I have a passion for building outstanding software, especially leading edge, user-centric applications.
+                I love to delight my clients, and have a track record of doing exactly that.
+                I want to work for an innovative, driven company who understands the work/life balance - working hard and enjoying life.
             </div>
 
             <div class="f24 myBody" style="color:red;margin:20px 0px 0px 0px;" id="theBrowser"></div>
 
 
-            <!--
-            <li style="font-size: 24px; list-style: square outside;">BS Business Administration, University Of Illinois, May 1984 (GPA 4.6/5.0)</li>
-            <li style="font-size: 24px; list-style: square outside;">Instructor for SharePoint Advanced Developer classes for The Ted Pattison Group curriculum   Ted Pattison Developer Courses - http://www.tedpattison.net/CoursesForDevelopers.aspx</li>
-            <li style="font-size: 24px; list-style: square outside;">Microsoft Regional Director in the US Midwest District for 3 years.</li>
-            <li style="font-size: 24px; list-style: square outside;">Public Speaker and Conference Presenter</li>
-            <li style="font-size: 24px; list-style: square outside;">Speaker at numerous conferences, including Microsoft TechEd US and Europe and Advisor Magazine DevCons - A recent event is the Microsoft MSDN Developer Conference - http://www.msdndevcon.com/Pages/Chicago.aspx</li>
-            <li style="font-size: 24px; list-style: square outside;">Founder / Partner,  The Bismarck Group, Chicago, Illinois - 1995 to 1997</li>
-            <li style="font-size: 24px; list-style: square outside;">Partner, The Information Management Group, Chicago, Illinois – 1997 to 2009</li>
--->
-            <!--
-            <div class="f18 myHeading">Who am I?</div>
-            <div class="f14" style="margin:5px 0px 0px 0px;">I have a passion for building outstanding software, especially leading edge, user-centric applications.</div>
-            <div class="f14">I have been building Graphical/Windows applications for over 15 years (C++, Visual Basic, .NET/C#)</div>
-            <div class="f14">I have been developing brower-based web applications for the past 10 years, ASP.NET, Silverlight, HTML5/JavaScript/CSS</div>
-            <div class="f14">I have been very Microsoft-centric in my career; i am very well versed on the Microsoft developer stack</div>
-            <div class="f14">I want to work for an innovative, driven company who understands the work/life balance - working hard and enjoying life.</div>
-            <div class="f14">I am ready to take on the next phase of my career as a senior developer, mentor and key resource to help build a small business.</div>
-            <div class="f14">I want to share my knowledge as a trainer and mentor.</div>
-            <div class="f14">I love to delight my clients, and have a track record of doing exactly that.</div>
-            <div class="f14">I am a huge beliver of continuous integration as part of the software development process.</div>
-            <div class="f14">I enjoy public speaking, and have spoken at many industry developer conferences (Microsoft Tech-Ed, Advisor DevCon)</div>
-            <div class="f14">I was the President and key speaker for Microsoft Interactive Developer Group in Chicago</div>
-            -->
+                <!--
+                    <li style="font-size: 24px; list-style: square outside;">BS Business Administration, University Of Illinois, May 1984 (GPA 4.6/5.0)</li>
+                    <li style="font-size: 24px; list-style: square outside;">Instructor for SharePoint Advanced Developer classes for The Ted Pattison Group curriculum   Ted Pattison Developer Courses - http://www.tedpattison.net/CoursesForDevelopers.aspx</li>
+                    <li style="font-size: 24px; list-style: square outside;">Microsoft Regional Director in the US Midwest District for 3 years.</li>
+                    <li style="font-size: 24px; list-style: square outside;">Public Speaker and Conference Presenter</li>
+                    <li style="font-size: 24px; list-style: square outside;">Speaker at numerous conferences, including Microsoft TechEd US and Europe and Advisor Magazine DevCons - A recent event is the Microsoft MSDN Developer Conference - http://www.msdndevcon.com/Pages/Chicago.aspx</li>
+                    <li style="font-size: 24px; list-style: square outside;">Founder / Partner,  The Bismarck Group, Chicago, Illinois - 1995 to 1997</li>
+                    <li style="font-size: 24px; list-style: square outside;">Partner, The Information Management Group, Chicago, Illinois – 1997 to 2009</li>
+        -->
+                <!--
+        <div class="f18 myHeading">Who am I?</div>
+        <div class="f14" style="margin:5px 0px 0px 0px;">I have a passion for building outstanding software, especially leading edge, user-centric applications.</div>
+        <div class="f14">I have been building Graphical/Windows applications for over 15 years (C++, Visual Basic, .NET/C#)</div>
+        <div class="f14">I have been developing brower-based web applications for the past 10 years, ASP.NET, Silverlight, HTML5/JavaScript/CSS</div>
+        <div class="f14">I have been very Microsoft-centric in my career; i am very well versed on the Microsoft developer stack</div>
+        <div class="f14">I want to work for an innovative, driven company who understands the work/life balance - working hard and enjoying life.</div>
+        <div class="f14">I am ready to take on the next phase of my career as a senior developer, mentor and key resource to help build a small business.</div>
+        <div class="f14">I want to share my knowledge as a trainer and mentor.</div>
+        <div class="f14">I love to delight my clients, and have a track record of doing exactly that.</div>
+        <div class="f14">I am a huge beliver of continuous integration as part of the software development process.</div>
+        <div class="f14">I enjoy public speaking, and have spoken at many industry developer conferences (Microsoft Tech-Ed, Advisor DevCon)</div>
+        <div class="f14">I was the President and key speaker for Microsoft Interactive Developer Group in Chicago</div>
+        -->
 
 
-        </header>
+</header>
 
         <div id="flip" class="container">
 
