--- a/index.html
+++ b/index.html
@@ -401,15 +401,14 @@
                 Marc Gusmano
             </div>
             <div class="f18">Senior HTML5 and Microsoft SharePoint Architect</div>
-            <div class="f18 myHeading">Summary:</div>
-            <div class="f16 myBody">
+            <div class="f16 myBody" style="margin: 20px 0px 0px 0px;">
                 Senior Manager with Hitachi Consulting based in the Houston, TX office
                 with 30 years of experence in the software services industry.
             </div>
             <div class="f16 myBody" style="margin: 20px 0px 0px 0px;">
                 Mr. Gusmano is extensively involved with custom HTML5 development projects, typically combining his knowledge of the underlying
                 Microsoft SharePoint architecture with his experience building HTML5 Single Page Applications; working on the requirements,
-                design and development of custom solutions.
+                design and development and implementation of custom solutions.
             </div>
 
             <div class="f14 myBody" style="margin: 20px 0px 0px 0px;">
