--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
             <div class="f-page f-cover">
                 <div class="cover-elements">
                     <h1 class="f18">Swipe or drag</h1>
-                    <h1 class="f18">to flip pages<span>Best viewed on iPad</span></h1>
+                    <h1 class="f18">to flip pages</h1>
                     <div class="f-cover-story f16"><span>Projects Summary</span>Marc Gusmano<div>&nbsp</div></div>
                 </div>
                 <div class="f-cover-flip f24">&lt; Flip The Page</div>
