--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
             <div class="f14 myBody" style="font-style: italic; color: #146BA8; margin: 20px 0px 0px 0px;">
                 "I have a passion for building outstanding software, especially leading edge, user-centric applications.
                 I love to delight my clients, and have a track record of doing exactly that.
-                I want to work for an innovative, driven company who understands the work/life balance - working hard and enjoying life."
+                I enjoy working for an innovative, driven company who understands the work/life balance - working hard and enjoying life."
             </div>
 
             <div class="f24 myBody" style="color:red;margin:20px 0px 0px 0px;" id="theBrowser"></div>
