--- a/index.html
+++ b/index.html
@@ -406,8 +406,8 @@
                 with 30 years of experence in the software services industry.
             </div>
             <div class="f16 myBody" style="margin: 20px 0px 0px 0px;">
-                Mr. Gusmano is extensively involved with custom HTML5 development projects, typically combining his knowledge of the underlying
-                Microsoft SharePoint architecture with his experience building HTML5 Single Page Applications; working on the requirements,
+                Extensively involved with custom HTML5 development projects, typically combining knowledge of the underlying
+                Microsoft SharePoint architecture with experience building HTML5 Single Page Applications; working on the requirements,
                 design and development and implementation of custom solutions.
             </div>
 
@@ -416,14 +416,19 @@
                 - Microsoft Regional Director in the US Midwest District for 3 years<br />
                 - Developing brower-based web applications for the past 10 years<br />
                 - Speaker at numerous conferences, including Microsoft TechEd<br />
-                - Founder / Partner, The Bismarck Group, Chicago, Il<br />
-                - Partner, The Information Management Group, Chicago, Il<br />
+                - Founder/Partner, The Bismarck Group, Chicago, IL<br />
+                - Partner, The Information Management Group, Chicago, IL
             </div>
 
             <div class="f14 myBody" style="font-style: italic; color: #146BA8; margin: 20px 0px 0px 0px;">
                 "I have a passion for building outstanding software, especially leading edge, user-centric applications.
                 I love to delight my clients, and have a track record of doing exactly that.
                 I enjoy working for an innovative, driven company who understands the work/life balance - working hard and enjoying life."
+            </div>
+
+            <div class="f12 myBody" style="margin: 20px 0px 0px 0px;">
+                847-331-2020<br />
+                mgusmano@yahoo.com
             </div>
 
             <div class="f24 myBody" style="color:red;margin:20px 0px 0px 0px;" id="theBrowser"></div>
