--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                 with 30 years of experence in the software services industry.
             </div>
             <div class="f16 myBody" style="margin: 20px 0px 0px 0px;">
-                Extensively involved with custom HTML5 development projects, typically combining knowledge of the underlying
+                Extensively involved with custom HTML5 browser and mobile development projects, typically combining knowledge of the underlying
                 Microsoft SharePoint architecture with experience building HTML5 Single Page Applications; working on the requirements,
                 design and development and implementation of custom solutions.
             </div>
@@ -423,7 +423,7 @@
             <div class="f14 myBody" style="font-style: italic; color: #146BA8; margin: 20px 0px 0px 0px;">
                 "I have a passion for building outstanding software, especially leading edge, user-centric applications.
                 I love to delight my clients, and have a track record of doing exactly that.
-                I enjoy working for an innovative, driven company who understands the work/life balance - working hard and enjoying life."
+                I enjoy working for an innovative, driven company who understands the balance of working hard and enjoying life..."
             </div>
 
             <div class="f12 myBody" style="margin: 20px 0px 0px 0px;">
